--- a/index.html
+++ b/index.html
@@ -1,45 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" href="./main.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <section class="top-container">
+    <div class="top-content">
+      <h1>Reliable, efficient delivery</h1>
+      <h1><strong>Powered by Technology</strong></h1>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+      <p>Our Artificial Intelligence powered tools use millions of project data points
+        to ensure that your project is successful</p>
+    </div>
+  </section>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <section class="bottom-container">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    <div class="bottom-content">
+      <div class="block-container supervisor">
+        <div class="block-top">
+          <h3>Supervisor</h3>
+          <p class="block-p">Monitors activity to identify project roadblocks</p>
+        </div>
+        <div class="img-container">
+          <img src="./images/icon-supervisor.svg" alt="supervisor">
+        </div>
+      </div>
+      <div class="combined-container">
+        <div class="block-container team-builder">
+          <div class="block-top">
+            <h3>Team Builder</h3>
+            <p class="block-p">Scans our talent network to create the optimal team for your project</p>
+          </div>
+          <div class="img-container">
+            <img src="./images/icon-team-builder.svg" alt="team-builder">
+          </div>
+        </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+        <div class="block-container karma">
+          <div class="block-top">
+            <h3>Karma</h3>
+            <p class="block-p">Regularly evaluates our talent to ensure quality</p>
+          </div>
+          <div class="img-container">
+            <img src="./images/icon-karma.svg" alt="karma">
+          </div>
+        </div>
+      </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+      <div class="block-container  calculator">
+        <div class="block-top">
+          <h3>Calculator</h3>
+          <p class="block-p">Uses data from past projects to provide better delivery estimates</p>
+        </div>
+        <div class="img-container">
+          <img src="./images/icon-calculator.svg" alt="calculator">
+        </div>
+      </div>
+    </div>
 
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  </section>
+
 </body>
+
 </html>
